overflow fix
new

--- a/tabbstyle.css
+++ b/tabbstyle.css
@@ -26,6 +26,7 @@ a {
 
 html { 
     cursor:url(media/point.png), auto;
+       overflow-x: hidden;
 }
 
 body {  
